// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings with headline data should render correctly 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
    id="content"
    tabindex="-1"
  >
    This is a headline!
  </h1>
</div>
`;

exports[`Headings with plain text headline should render h1 containing correct text 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
    id="content"
    tabindex="-1"
  >
    Plain headline
  </h1>
</div>
`;

exports[`Headings with plain text subheadline should render h2 containing correct text 1`] = `
.c1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-top: 2rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    id="Plain-subheadline"
    tabindex="-1"
  >
    Plain subheadline
  </h2>
</div>
`;

exports[`Headings with rich text headline with bold text should render h1 with <b> tag 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
    id="content"
    tabindex="-1"
  >
    <b>
      All is bold
    </b>
  </h1>
</div>
`;

exports[`Headings with rich text headline with italic text should render h1 with <i> tag 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
    id="content"
    tabindex="-1"
  >
    <i
      class="c2"
    >
      All is italic
    </i>
  </h1>
</div>
`;

exports[`Headings with rich text should render headline with bold & italic text should render h1 with <i><b> tags 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
    id="content"
    tabindex="-1"
  >
    <i
      class="c2"
    >
      <b>
        All is bold and italic
      </b>
    </i>
  </h1>
</div>
`;

exports[`Headings with rich text should render headline with italic & bold text should render h1 with <b><i> tags 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
    id="content"
    tabindex="-1"
  >
    <b>
      <i
        class="c2"
      >
        All is italic and bold
      </i>
    </b>
  </h1>
</div>
`;

exports[`Headings with rich text with different attributes should render headline with only middle of text italic should render correctly 1`] = `
.c1 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 2rem 0;
}

.c2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding: 2.5rem 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
    id="content"
    tabindex="-1"
  >
    This is 
    <i
      class="c2"
    >
      very
    </i>
     important
  </h1>
</div>
`;

exports[`Headings with subheadline data should render correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-top: 2rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    id="This-is-a-subheadline"
    tabindex="-1"
  >
    This is a subheadline
  </h2>
</div>
`;
